--- a/src/app/pages/store/products-page/products-page.component.html
+++ b/src/app/pages/store/products-page/products-page.component.html
@@ -122,6 +122,7 @@
         </td>
         <td style="text-align: center">
           <p-cellEditor>
+            <!-- Modo de Edição -->
             <ng-template pTemplate="input">
               <input size="6" pInputText type="text" pKeyFilter="num" id="number"
                 onkeypress="return event.charCode >= 48 && event.charCode <= 57" [(ngModel)]="selectedProduct.quantity"
@@ -129,22 +130,23 @@
             </ng-template>
             <ng-template pTemplate="output">
               <div pTooltip="Em orçamentos: {{ getQuantityInBudget(product._id).quantity }}
-                                       Clientes: {{ getQuantityInBudget(product._id).clients.join(', ') }}"
-                tooltipPosition="top" [ngClass]="{'outofstock': (product.quantity - getQuantityInBudget(product._id).quantity) === 0,
-                               'lowstock': ((product.quantity - getQuantityInBudget(product._id).quantity) > 0 &&
-                                            (product.quantity - getQuantityInBudget(product._id).quantity) <= 10),
-                               'instock': (product.quantity - getQuantityInBudget(product._id).quantity) > 10}">
+                             Clientes: {{ getQuantityInBudget(product._id).clients.join(', ') }}" tooltipPosition="top"
+                [ngClass]="{
+                  'outofstock': (product.quantity - getQuantityInBudget(product._id).quantity) === 0,
+                  'lowstock': ((product.quantity - getQuantityInBudget(product._id).quantity) > 0 &&
+                              (product.quantity - getQuantityInBudget(product._id).quantity) <= (product.min_stock)),
+                  'instock': (product.quantity - getQuantityInBudget(product._id).quantity) > 10
+                }">
                 <span *ngIf="(product.quantity - getQuantityInBudget(product._id).quantity) > 0">
                   {{ product.quantity - getQuantityInBudget(product._id).quantity }}
                 </span>
+
                 <span *ngIf="(product.quantity - getQuantityInBudget(product._id).quantity) === 0" class="badge">
                   Fora de Estoque
                 </span>
               </div>
             </ng-template>
-
           </p-cellEditor>
-
         </td>
         <td style="text-align: center">
           <p-cellEditor>
