feat: Enhance confirmation dialogs with labels and improve loading indicators in various pages

--- a/src/app/pages/store/box-page/box-page.component.html
+++ b/src/app/pages/store/box-page/box-page.component.html
@@ -63,9 +63,9 @@
       </div>
 
       <!-- Loader -->
-      <div *ngIf="loading" class="text-center">
+      <!-- <div *ngIf="loading" class="text-center">
         <i class="pi pi-spinner pi-spin" style="font-size: 2em;"></i>
-      </div>
+      </div> -->
     </div>
 
 
