--- a/src/app/pages/store/products-page/products-page.component.html
+++ b/src/app/pages/store/products-page/products-page.component.html
@@ -17,40 +17,9 @@
       <p-button severity="help" label="Exportar" icon="pi pi-file-excel" (onClick)="exportToExcel()"></p-button>
     </ng-template>
   </p-toolbar>
-
-  <div *ngIf="isLoading">
-    <p-table [value]="[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]" responsiveLayout="scroll" class="p-datatable-striped">
-      <ng-template pTemplate="header">
-        <tr>
-          <th></th>
-          <th>produto</th>
-          <th>Estoque</th>
-          <th>Em orçamento</th>
-          <th>Fornecedor</th>
-          <th>Valor de compra</th>
-          <th>Valor de Venda</th>
-          <th>Ações</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-row>
-        <tr>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-          <td><p-skeleton></p-skeleton></td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
-
   <!-- Data Table -->
-  <p-table *ngIf="!isLoading" dataKey="_id" editMode="row" [paginator]="true" [rows]="limit" [first]="offset"
-    [totalRecords]="total" [showCurrentPageReport]="true"
-    currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} produtos"
+  <p-table dataKey="_id" editMode="row" [paginator]="true" [rows]="limit" [first]="offset" [totalRecords]="total"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} produtos"
     [rowsPerPageOptions]="[100, 150, 200, 250, 350, 500]" [tableStyle]="{'min-width': '50rem'}"
     styleClass="p-datatable-striped" [value]="filteredProducts" [lazy]="true" (onPage)="pageChange($event)">
 
